--- a/computing.tex
+++ b/computing.tex
@@ -1,15 +1,17 @@
 % moved to main doc \section{Computing requirements, data handling and software}
 
-%\subsection{Overview}
+\subsection{Overview}
 The proposed ``Full Scale'' test of a single-phase Liquid Argon TPC at CERN will build upon the technology and expertise developed in the
 process of design and operation of its smaller predecessor, the 35t detector at FNAL.
 This includes elements of front-end electronics, data acquisition, run controls and related systems. We also expect that for the most part,
-Monte Carlo studies necessary to support this program will be conducted utilizing software evolved from tools currently used (2015).
+Monte Carlo studies necessary to support this program will be conducted utilizing software evolved from tools currently used (2015). Likewise,
+event reconstruction software and analysis tools will rely on the evolving software tools developed for DUNE/LBNF.
 
-In the test-beam setup, the detector performance will be characterized for different types of particles, e.g. $p$, $\pi^{\pm}$, $\mu^{\pm}$ etc (see~\ref{detbeam_main}).
-Current plans call for measurements in pre-defined bins of the incident particle momentum, which will have widths ranging from tens to
-hunderds of MeV (see~\ref{bin_table}). The volume of data to be recorded shall be determined by the number of events to be collected in each measurement, such that is
-provides adequately low statistical uncertainty of the parameters measured.
+In the test-beam setup, the detector performance will be characterized for different types of particles,
+e.g. $p$, $\pi^{\pm}$, $\mu^{\pm}$ etc (see~\ref{detbeam_main}).
+Current plans call for measurements in pre-defined bins of the incident particle momentum, (see Cheng-Ju's table -fixme-). The volume of the recorded data  will depend on the number of events to be collected in each measurement,
+as specified in the run plan. As will be shown in the material presented below, cosmic ray muons have a very large impact on the data rates and
+volume due to the large dimensions of the TPC in this test.
 
 In our view, it is optimal to first stage the ``precious'' data collected from the prototype on disk at CERN and then sink it to tape (also at CERN),
 while simultaneously performing replication to data centers in the US. For the latter, FNAL is the prime candidate, with additional data centers at Brookhaven National Laboratory
@@ -18,32 +20,45 @@ and the NERSC facility as useful additional locations for better redundancy and 
 \subsection{Collecting and Storing Raw Data}
 
 \subsubsection{Considerations for Event Size Estimates}
-
-To set the scale, let's consider an approximate \textbf{upper limit} on the number of channels with signals above the threshold
-of zero-suppression, for a single track. For this we assume digitization rate fixed at 2MHz, and 4312 samples per drift window. In a single
-anode plane assembly (APA), it will be approximately of the order of channel count in the APA, i.e. around 2500, \textit{when the track is parallel to the APA plane}.
-Since each sample is 16 bit (or 12 bit in more design), we arrive to the limit of approximately 20MB per single charged track.
-For this class of events, the amount of data will scale roughly linearly with the length of the track, i.e. in cases when a track is stopped or leaves the sensitive volume
-there will be less data. Further, in most cases the data will be zero-suppressed by the front-end electronics (e.g signals below a certain threshold
-will not be included into the outgoing data stream). The exact data reduction factor will depend on a variety of factors (cf. threshold), but as a rule of
-thumb it's an order of magnitude. \textit{We conclude therefore the events will typically be a few megabytes in size}. This in fact is supported
-by previous Monte Carlo studies performed for ealier versions of LBNE LAr TPC (more detail will be presented below).
-
-At the time of writing, work is being done on the physical design of the Liquid Argon prototype, and the number of the Anode Plane Assemblies (APA)
-to be installed in the detector is not yet finalized. It will likely be 2 or 3, however there is a possibility of this number to be as high as 6.  There is therefore a
-factor of two or three  uncertainty in the number of readout channels in the detector (e.g. 7680 with 3 APA vs 15360 with 6).
-
-This would affect the amount of data produces by DAQ, although not necessarily by a factor of two since a large part of the raw data will be zero-suppressed
-and occupancy in general is expected to be low. With each additional APA, the number of background tracks (or track segments) produced by cosmic ray
-muons will scale very approximately at a rate of O(1) per APA. Because of the direction of incidence of these tracks and the fact that in most cases they will
-be crossing only part of the active volume, we will account for this by adding data equivalent to approx. 5 extra tracks to each event. This will very roughly correspond
-the upper limit of 6 APAs in the apparatus and thus the estimate will be conservative.
-
-In addition to the principal sensitive volume where Liquid Argon will serve as active medium for the TPC, the prototype will also contain a Photon Detector designed
+In addition to the sensitive volume of the TPC where Liquid Argon will serve as the active medium measuring ionization charge,
+the prototype will also contain a Photon Detector designed
 to record light pulses produced in Argon due to scintillation caused by ionizing radiation. In any realistic scenario, the amount of data to be produced by
 the Photon Detector will be quite small compared to that of the Liquid Argon TPC. Same goes for other elements of the experimental apparatus (hodoscopes,
 trigger systems etc) and as a result, for the purposes of this section, we shall focus only on the Liquid Argon TPC as the critical source of data.
 
+To set the scale of the data generated by the TPC readout, let's consider an approximate \textbf{upper limit} on the number of channels with
+signals above the threshold of zero-suppression, for a single track. All numbers used in this estimate
+are approximate and purely for demonstration purposes. For this we assume digitization rate fixed at 2MHz,
+and 4312 samples per drift window. In a single anode plane assembly (APA), it will be approximately of the order of
+channel count in the APA, i.e. around 2500, \textit{when the track is parallel to the APA plane}.
+Since each sample is 16 bit (or 12 bit in more recent design), we arrive to the limit of approximately 20MB per single charged track.
+For this class of events, the amount of data will scale roughly linearly with the length of the track, i.e. in cases when a track is
+stopped or leaves the sensitive volume there will be less data. Further, in most cases the data will be zero-suppressed by the front-end
+electronics (e.g signals below a certain threshold
+will not be included into the outgoing data stream). The exact data reduction factor will depend on a variety of factors
+(cf. threshold, which is yet to be chosen), but as a rule of
+thumb it's an order of magnitude. \textit{We conclude therefore the events will typically be a few megabytes in size}. In fact, this is supported
+by previous Monte Carlo studies performed for ealier versions of LBNE LAr TPC).
+
+At the time of writing, work is being done on the physical design of the Liquid Argon prototype, and the number of the Anode Plane Assemblies (APA)
+to be installed in the detector is not yet finalized. It will likely be 2 or 3, however there is a possibility of this number to be as high as 6.  There is therefore a
+factor of two or three  uncertainty in the number of readout channels in the detector (e.g. 7680 with 3 APA vs 15360 with 6). In general, the assumption made
+going forward will be that the number of APAs is 6.
+
+%This would affect the amount of data produces by DAQ, although not necessarily by a factor of two since a large part of the raw data will be zero-suppressed
+%and occupancy in general is expected to be low. With each additional APA, the number of background tracks (or track segments) produced by cosmic ray
+%muons will scale very approximately at a rate of O(1) per APA. Because of the direction of incidence of these tracks and the fact that in most cases they will
+%be crossing only part of the active volume, we will account for this by adding data equivalent to approx. 5 extra tracks to each event. This will very roughly correspond
+%the upper limit of 6 APAs in the apparatus and thus the estimate will be conservative.
+
+\subsubsection{Cosmic Ray Muons}
+Given standard values quoted for the cosmic ray muon flux at sea level, we arrive to a number of roughly 200 incident muons
+per square meters per second.
+Taking into account the dimensions of the TPC, we estimate the area of the top face of its rectangular volume to be just over 50m$^{2}$,
+which means that the detector will subject to occupancy of the order of 10$^{4}$ particles per second. This is important since the drift time
+in liquid Argon will be of the order of 2ms, meaning that each full ``frame'' will contain $\sim$50 track segments on top of the actual beam event
+being detected. According to previous Monte Carlo studies, we will assume a ballpark value of 5MB of data to be read out per average muon track.
+Thus we arrive to an estimate of 250MB data load in each event, due solely to the detector exposure to cosmic rays.
 
 \subsubsection{``Before'' and ``After'' Readout Windows}
 \label{readout_windows}
@@ -54,54 +69,76 @@ trigger systems etc) and as a result, for the purposes of this section, we shall
 As we just mentioned, the detector will be sensitive to background tracks due to cosmic ray particles.  These must be properly identified
 and accounted for, in order to ensure high quality of the measurements and subsequent detector characterization. Since overlay of cosmic
 ray muons over beam events is stochastic in nature, the optimal way to achieve this is by recording signals which were produced ``just before''
-and ``just after'' the arrival of the test particle from the beamline. Tthis will enable us to reconstruct either partial or complete background
+and ``just after'' the arrival of the test particle from the beamline. It will be possible because the design of the DAQ contains buffer memory that
+can be accessed after the trigger decision is made. This technique will enable us to record and reconstruct either partial or complete background
 tracks present in the ``main'' event.
 
-To ensure complete collection of charge due to such tracks, the additional readout windows before and after 
-the beam event should equal the nominal total drift time for the collection volume (approx. 2.1ms). This will triple the amount of
-data due to cosmic rays, collected from the detector.
+\textit{To ensure complete collection of charge due to such tracks, the additional readout windows (``before'' and ``after'') 
+should equal the nominal total drift time. This will triple the amount of
+data due to cosmic rays, collected from the detector for each nominal event, which now translates into a total of 750MB.}
 
 
 \subsubsection{Statistics and the Volume of Data}
 \label{bin_table}
-Experimental program for the test includes triggering on a few types of particles over a range of momenta (see~\ref{detbeam_main}). We introduce
-bins for the particle momenta as shown in the table below. The estimated event sizes listed in the table are based on interpolation of results from
-Monte Carlo studies performed earlier for the 10kt version of the LBNE Far Detector and must be considered as approximate, ballpark estimates.
-Hadronic and electromagnetic showers were included in the MC samples so their effect is accounted for. As a concrete example, for an incident
-electron of 4GeV/c momentum calculations indicate an average event size of $\sim$2MB, after zero-suppression.
+
+In view of the factors due to the cosmic ray muons presented above, the actual beam particle event data will represent but a fraction of
+the total volume being read out.  As a concrete example, for an incident
+electron of 4GeV/c momentum MC calculations indicate an average event size of $\sim$2MB, after zero-suppression.This is less than 1\%
+of the estimate quoted above. For that reason we will not go into the exercise of detailed estimations of the data size for each nominal class
+of events included in the run plan.
+
+The run plan is presented in (see Cheng-Ju's table -fixme-). It is understood that it does not include considerations of data volume
+and this will be addressed below. Total statistics in the plan is approximately 25M events total, split across different particle species
+and insident momentum bins. Taking into account the 750MB data load per event, this leads to the estimate of the 18PB of nominal
+data volume to be collected in this experiment. This is obviously high and will need to be mitigated. Some of the approaches to be
+explored are:
+\begin{itemize}
+\item Prioritization of the run plan: the run plan may be redesigned by doing more detailed MC studies and defining priorities in a way that
+will allow us to reduce the statistics in certain modes of measurement
+\item Partial readout of the TPC: the particle beam will be narrow compared to the dimensions of the TPC. It is possible therefore to reduce the
+number of channels to be read out in each event.The scale of event features such as showers will determine limitations of this approach. For this readon,
+it is not likely that the economy will be more than a factor of ten and in practice probably less.
+\end{itemize}
 
 
-\begin{center}
-\begin{tabular}[h]{|l|r|r|r|r|}
-  \hline
- Particle & Momentum Range& Bin         & Approx. event \\ % & Approx. \#\\
- Type    &  (GeV/c)                 & (MeV/c) & size, MB \\ %& of events, $10^6$\\
-  \hline
-  $p$ & 0.1-2.0 & 100 & 1 \\ % & 1 \\
-  $p$ & 2.0-10.0 & 200 & 5 \\ %& 1 \\
-  \hline
-   $\mu^{\pm}$ & 0.1-1.0 & 50  & 1 \\ % & 1 \\
-   $\mu^{\pm}$ & 1.0-10.0 & 200  & 5 \\ % & 1 \\
-%   $\mu^{\pm}$ & $>$100 & ?  & 20 & 1 \\
-  \hline
-   $e^{\pm}$ & 0.1-2.0 & 100 & 1  \\ % & 1 \\
-   $e^{\pm}$ & 2.0-10.0 & 200  & 4 \\ % & 1 \\
-  \hline
-   $K^{+}$ & 0.1-1.0 & 100 & 1  \\ % & 1 \\
-  \hline
-   $\gamma(\pi^{0})$ & 0.1-2.0 & 100  & 1 \\ % & 1 \\
-   $\gamma(\pi^{0})$ & 2.0-5.0 & 200  & 5 \\ % & 1 \\
-  \hline
-\end{tabular}
-\end{center}
 
-Prelimiary plans call for statistics of the order of $10^4 - 10^5$  events to be collected in each bin.
-% so in the table above we marked it as nominal 1M events for each entry. The requirements to the scale of these statistics are currently being refined.
-Depending on the assumptions, this translates into $\sim$20 million events total (for all event classes) to ensure enough statistics for subsequent analysis.
-Taking into account the cosmic ray overlay and additional readout windows as explained in~\ref{readout_windows}, we arrive to a number
-of $\sim$1PB for total storage space necessary to host \textbf{the raw data}. This needs to be looked at as the basis for tape budget. As explained below, this
-volume of data needs to be replicated for assured preservation, in at least one more additional facility, hence in effect this number must be doubled when budgeting
-tape.
+
+%Experimental program for the test includes triggering on a few types of particles over a range of momenta (see~\ref{detbeam_main}). We introduce
+%bins for the particle momenta as shown in the table below. The estimated event sizes listed in the table are based on interpolation of results from
+%Monte Carlo studies performed earlier for the 10kt version of the LBNE Far Detector and must be considered as approximate, ballpark estimates.
+%Hadronic and electromagnetic showers were included in the MC samples so their effect is accounted for. As a concrete example, for an incident
+%electron of 4GeV/c momentum calculations indicate an average event size of $\sim$2MB, after zero-suppression.
+
+%\begin{center}
+%\begin{tabular}[h]{|l|r|r|r|r|}
+ % \hline
+ %Particle & Momentum Range& Bin         & Approx. event \\ % & Approx. \#\\
+ %Type    &  (GeV/c)                 & (MeV/c) & size, MB \\ %& of events, $10^6$\\
+ %\hline
+ %$p$ & 0.1-2.0 & 100 & 1 \\ % & 1 \\
+ %$p$ & 2.0-10.0 & 200 & 5 \\ %& 1 \\
+ %\hline
+ % $\mu^{\pm}$ & 0.1-1.0 & 50  & 1 \\ % & 1 \\
+ % $\mu^{\pm}$ & 1.0-10.0 & 200  & 5 \\ % & 1 \\
+%%   $\mu^{\pm}$ & $>$100 & ?  & 20 & 1 \\
+% \hline
+%   $e^{\pm}$ & 0.1-2.0 & 100 & 1  \\ % & 1 \\
+ %  $e^{\pm}$ & 2.0-10.0 & 200  & 4 \\ % & 1 \\
+ % \hline
+ %  $K^{+}$ & 0.1-1.0 & 100 & 1  \\ % & 1 \\
+ % \hline
+ %  $\gamma(\pi^{0})$ & 0.1-2.0 & 100  & 1 \\ % & 1 \\
+ %  $\gamma(\pi^{0})$ & 2.0-5.0 & 200  & 5 \\ % & 1 \\
+ % \hline
+%\end{tabular}
+%\end{center}
+
+%Prelimiary plans call for statistics of the order of $10^4 - 10^5$  events to be collected in each bin.
+%Depending on the assumptions, this translates into $\sim$20 million events total (for all event classes) to ensure enough statistics for subsequent analysis.
+%Taking into account the cosmic ray overlay and additional readout windows as explained in~\ref{readout_windows}, we arrive to a number
+%of $\sim$1PB for total storage space necessary to host \textbf{the raw data}. This needs to be looked at as the basis for tape budget. As explained below, this
+%volume of data needs to be replicated for assured preservation, in at least one more additional facility, hence in effect this number must be doubled when budgeting
+%tape.
 
 \subsubsection{Summary of the Data Volume Estimates}
 The total amount of data to be collected during the prototype operation will be considerable under all assumptions and estimates.
@@ -137,14 +174,16 @@ downtime dut to network outages etc. A replication mechanism will need to be put
 The volume of data stored in these databases will likely to be quite modest.
 
 
-\subsection{A note on Simulation and Reconstruction Software}
-Research effort connected to the ``Full Scale'' prototype at CERN will benefit from utilizing simulation toolkits, and tracking and other reconstruction
-algorithms created by communities such as former LBNE, and especially during the 35t test at FNAL.
+\subsection{Software Infrastructure}
+Research effort within the scope of the ``Full Scale'' prototype at CERN will benefit from utilizing simulation toolkits, tracking and other reconstruction
+algorithms created in the IF community, and especially during the 35t test at FNAL.
 
 \textit{In order to leverage this
-software and expertise, appropriate manpower will need to be allocated in order to create and maintain physics analysis tools
-necessary to fulfill the research goals of this experiment.} Given the widely distributed nature of the Collaboration and the need
-to use geographically dispersed resources (see ~\ref{distr_proc},
+software and expertise, appropriate manpower will need to be allocated in order to create and maintain
+the computing infrastructure necessary for effective use of the reconstruction and physics analysis tools.}
+
+Given the widely distributed nature of the Collaboration and the need
+to use geographically dispersed resources (see~\ref{distr_proc}),
 the software components of these tools will need to be portable, well maintained and validated. To ensure that this happens,
 we plan to establish close cooperation among participating laboratories and other research institutions.
 
@@ -175,7 +214,7 @@ As an example, we have had good experience working with the Open Science Grid Co
 
 
 \subsubsection{Scale of the Processed Data}
-As discussed above, we estimat the volume of raw data to be in the petabyte range. We also must address the offline data, which can be classified as follows:
+As discussed above, we estimat the volume of raw data to be in the multi-petabyte range. We also must address the offline data, which can be classified as follows:
 \begin{itemize}
 \item Monte Carlo data, which will contain multiple event samples to cover various event types and other conditions during the measurements with the prototype detector
 \item Data derived from Monte Carlo events, and produced with a variety of tracking and pattern recognition algorithms in order to create a basis for the detector characterization
@@ -183,14 +222,16 @@ As discussed above, we estimat the volume of raw data to be in the petabyte rang
 \item Processed experimental data, which will likely exist in a few brunches corresponding to a few reconstruction algorithms being applied, with the purpose of their evaluation
 \end{itemize}
 
-In the latter, there will likely be more than one processing step, thus multiplying data volume. There is sometimes a question about how much of the raw data should be preserved in
-the processed data streams. Given a relatively large volume of raw data, the answer in this case will likely be ``none'' - for practical reasons, meaning that the derived data will
+In the latter, there will likely be more than one processing step, thus multiplying data volume. There is sometimes a question
+about how much of the raw data should be preserved in the processed data streams.
+Given the large volume of raw data, the answer in this case will likely be ``none'' - for practical reasons, meaning that the derived data will
 be just that, and that the size of the processed data will likely by significantly smaller than the input (the raw data). Given consideration presented above, we will plan for
-$\sim$1PB of tape storage to keep the processed data. For efficient processing, disk storage will be necessaty to stage a considerable portion of both raw data (inputs) and
-one or a few steps in processing (outputs).
+$\sim$$ O($1PB$)$ of tape storage to keep the processed data. For efficient processing, disk storage will be necessaty
+to stage a considerable portion of both raw data (inputs) and one or a few steps in processing (outputs).
 
 Extrapolating from our previous experience running Monte Carlo for the former LBNE Far Detector, we estimate that we'll need a few hundred TB of continuously available
-disk space. In summary, we request 2PB of disk storage at FNAL to ensure optimal data availability and processing efficiency. Access to distributed data is discussed below.
+disk space. In summary, we expect the need for 5PB of disk storage at FNAL to ensure optimal data availability and processing efficiency.
+Access to distributed data is discussed below.
 
 \subsubsection{Distributed Data}
 We foresee that data analysis (both experimental data and Monte Carlo) will be performed by collaborators residing in many institurions and geographically dispersed. In our
