--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -68,30 +68,34 @@ With current detector uncertainties from table \ref{table:deterr} the sensitivit
 
 \subsubsection{Particles energy and direction}
 \label{detbeam_particles}
-Plans for running beam for the the ELBNF include both neutrino and anti-neutrino configurations. These beams will be composed  mainly of muon neutrinos (anti-neutrinos) as well as electron neutrinos (anti-neutrinos). In figures \ref{fig:particle_momenta} and \ref{fig:particle_theta} the distributions on momenta and angles of particles created in neutrino interaction are shown. 
-
+The DUNE experiment will run beam in both neutrino and anti-neutrino 
+configurations. These beams will be composed  mainly of muon neutrinos (anti-neutrinos) as well as electron neutrinos (anti-neutrinos). In Fig. \ref{fig:particle_momenta} the distributions of momenta and angles of particles created in neutrino interactions from simulated beam fluxes are shown. 
 \begin{figure}[h!]
   \centering
-\includegraphics[scale=0.4]{figures/True_Momenta_per_Particle}
+\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/True_Momenta_per_Particle}
+\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/True_theta_per_Particle}
 \label{fig:particle_momenta}
-  \caption{Particle momenta distributions for particles coming from all fluxes ($\nu_e$, $\nu_\mu$, $\bar \nu_e$ and $\bar \nu_\mu$) at both near and far detector locations.  }
+  \caption{Particle momenta (left) and angular (right) distributions for particles produced in neutrino interactions 
+from $\nu_e$, $\nu_\mu$, $\bar \nu_e$ and $\bar \nu_\mu$ at the far detector location.}
 \end{figure}
 
 
-\begin{figure}[h!]
-  \centering
-\includegraphics[scale=0.4]{figures/True_theta_per_Particle}
-\label{fig:particle_theta}
-  \caption{Particle angle wrt to the beam axis distributions for particles coming from all fluxes ($\nu_e$, $\nu_\mu$, $\bar \nu_e$ and $\bar \nu_\mu$) at both near and far detector locations.  }
-\end{figure}
+%\begin{figure}[h!]
+%  \centering
+%\includegraphics[scale=0.4]{figures/True_theta_per_Particle}
+%\label{fig:particle_theta}
+%  \caption{Particle angle wrt to the beam axis distributions for particles coming from all fluxes ($\nu_e$, $\nu_\mu$, $\bar \nu_e$ and $\bar \nu_\mu$) at both near and far detector locations.  }
+%\end{figure}
 
-\newpage
+%\newpage
 
+Fig.~\ref{fig:containment} shows the simulated longitudinal and transverse containment for proton showers up to 10~GeV/c momentum.
+For 10 GeV showers, more than 95\% of the energy is contained in a detector of longitudinal size of 550~cm and 
+radius of 200~cm.
 
 \begin{figure}[htp]
   \centering
-  \label{fig:containment}
-  
+  \label{fig:containment}  
   \begin{tabular}{ccc}
 %    \includegraphics[scale=0.15]{figures/electrons_density_overlay}&
 %    \includegraphics[scale=0.15]{figures/electrons_lcont_overlay}&
@@ -111,9 +115,9 @@ Plans for running beam for the the ELBNF include both neutrino and anti-neutrino
 %    \includegraphics[scale=0.15]{figures/pions_lcont_overlay}&
 %    \includegraphics[scale=0.15]{figures/pions_wcont_overlay}\\
  
-   \includegraphics[width=0.31\textwidth,height=3.5cm]{figures/pions_density_overlay}&
-   \includegraphics[width=0.31\textwidth,height=3.5cm]{figures/pions_lcont_overlay}&
-   \includegraphics[width=0.31\textwidth,height=3.5cm]{figures/pions_wcont_overlay}\\
+%   \includegraphics[width=0.31\textwidth,height=3.5cm]{figures/pions_density_overlay}&
+%   \includegraphics[width=0.31\textwidth,height=3.5cm]{figures/pions_lcont_overlay}&
+%   \includegraphics[width=0.31\textwidth,height=3.5cm]{figures/pions_wcont_overlay}\\
 %    \includegraphics[scale=0.15]{figures/pions_density_overlay}&
 %    \includegraphics[scale=0.15]{figures/pions_lcont_overlay}&
 %    \includegraphics[scale=0.15]{figures/pions_wcont_overlay}\\
@@ -124,7 +128,9 @@ Plans for running beam for the the ELBNF include both neutrino and anti-neutrino
 %    \includegraphics[scale=0.15]{figures/kaons_wcont_overlay}\\
  
   \end{tabular}
-  \caption{Particle containment plots.}
+  \caption{Simulated longitudinal and transverse containment for proton showers of 4 and 10~GeV/c momenta.}
+%For 10 GeV showers, more than 95\% of the energy is contained in a detector of longitudinal size of 550~cm and 
+%radius of 200~cm.}
 \end{figure}
 
 \clearpage
@@ -132,9 +138,10 @@ Plans for running beam for the the ELBNF include both neutrino and anti-neutrino
 %\label{detbeam_rates}
 %Estimation of  beam particles rates  necessary to collect high enough statistics in a reasonable time to obtain goals of of the measurements.
 % THis should be discussed in the beam section
-\subsubsection {Run plan}
+\subsubsection {Summary of Beam Particle Requirements}
 
-Table~\ref{tab:runplan} summarizes the required exposures to beam particles.
+Table~\ref{tab:runsum} summarizes the requested particle types and momenta along with 
+required exposures for the test beam program.
 \begin{table}[h]
 \centering
 \begin{tabular}{|c|c|c|l|}
@@ -161,7 +168,7 @@ $\mu$, e, proton  & 1 (vary angle $\times$5 & 10K  & reconstruction  \\ \hline
 \end{tabular}
 \caption{Requirements summary for particle types and momenta. Items in parenthesis indicate lower priority (see text).
 }
-\label{tab:summaryphysics}
+\label{tab:runsum}
 \end{table}
 
 
